[package]
name = "cow-sdk-app-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "CoW Protocol app-data encoding, validation, and CID compatibility"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-app-data"
homepage = "https://github.com/0xSymbiome/cow-rs"
keywords = ["cow-protocol", "sdk", "app-data", "cid", "metadata"]
categories = ["encoding", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

# The library target carries no `#[bench]` functions; the criterion harness
# lives in the `[[bench]]` targets below. Marking the lib non-bench keeps
# `cargo bench` from routing criterion's CLI flags to the libtest harness.
[lib]
bench = false

[features]
default = []
tracing = ["dep:tracing", "cow-sdk-core/tracing"]
# The Tsify boundary derive on the partner-fee types (`PartnerFee`,
# `PartnerFeePolicy`) surfaced by the wasm-bindgen npm leaf's `trading` flavour
# (they appear inside the trading `QuoteResults` / `TradeParams` trees). Off by
# default and pulled only by that flavour: Tsify emits each `.d.ts` as a global
# `typescript_custom_section`, so a target-gated (but feature-ungated) derive
# would leak these into every flavour that links this crate. Gating the derive
# behind this feature scopes it to the `trading` flavour.
# The wasm `tsify`/`wasm-bindgen` deps are target-gated to JS realms, so
# enabling this on a non-wasm or WASI target is an inert no-op.
ts-bindings = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0-alpha.10" }
alloy-primitives.workspace = true
alloy-serde.workspace = true
cid.workspace = true
multibase.workspace = true
multihash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_jcs.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

# The Tsify boundary derive on the partner-fee types consumed by the
# wasm-bindgen npm leaf (`crates/js`). Gated to JS realms
# (`target_os = "unknown"`) so WASI / Component builds never pull
# tsify/wasm-bindgen — only the one wasm target whose `target_os` is `unknown`
# carries them. Mirrors the orderbook-crate gate. Optional and pulled by the
# `ts-bindings` feature: a wasm flavour that does not surface the partner-fee
# trees links this crate without the feature and so emits no declaration.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
cow-sdk-test-utils = { path = "../test-utils" }
criterion.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
trybuild.workspace = true

[[bench]]
name = "stringify"
harness = false
