[package]
name = "cow-sdk-browser-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Browser wallet integration for the CoW Protocol Rust SDK"
readme = "../../README.md"
documentation = "https://docs.rs/cow-sdk-browser-wallet"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "wallet", "wasm", "eip1193"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "wasm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
cow-sdk-core = { path = "../core", version = "0.1.0" }
ethabi = "18.0.0"
hex.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["js"] }
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["CustomEvent", "Event", "EventTarget", "Window"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
