[package]
name = "cow-sdk-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "CoW Protocol low-level contracts helpers for order hashing, signature codecs and verification, ABI bindings, and fail-closed on-chain event decoding"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-contracts"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "contracts", "ethereum", "hashing"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing", "cow-sdk-core/tracing"]

[dependencies]
alloy-primitives = { workspace = true, features = ["k256", "serde"] }
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
cow-sdk-core = { path = "../core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0" }
cow-sdk-subgraph = { path = "../subgraph", version = "0.1.0" }
cow-sdk-test-utils = { path = "../test-utils", features = ["proptest"] }
criterion.workspace = true
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
proptest.workspace = true
serde_yaml.workspace = true
sha3.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild.workspace = true

[[bench]]
name = "order_hashing"
harness = false

[[bench]]
name = "uid_packing"
harness = false
