[package]
name = "cow-sdk-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "CoW Protocol low-level contracts helpers for order hashing, signature codecs and verification, ABI bindings, and fail-closed on-chain event decoding"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-contracts"
homepage = "https://github.com/0xSymbiome/cow-rs"
keywords = ["cow-protocol", "sdk", "contracts", "ethereum", "hashing"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
all-features = true

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing", "cow-sdk-core/tracing"]
# COW Shed account-abstraction proxy, EIP-712, calldata, and hook-signing
# helpers. Off by default so the core contract helpers stay lean and pull no
# account-abstraction surface or `cow-sdk-app-data` dependency.
cow-shed = ["dep:cow-sdk-app-data"]

[dependencies]
alloy-primitives = { workspace = true, features = ["k256", "serde"] }
alloy-sol-types.workspace = true
cow-sdk-app-data = { path = "../app-data", version = "0.1.0-alpha.7", optional = true }
cow-sdk-core = { path = "../core", version = "0.1.0-alpha.7" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
cow-sdk-orderbook = { path = "../orderbook", version = "0.1.0-alpha.7" }
cow-sdk-subgraph = { path = "../subgraph", version = "0.1.0-alpha.7" }
cow-sdk-test-utils = { path = "../test-utils", features = ["proptest"] }
criterion.workspace = true
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
proptest.workspace = true
sha3.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild.workspace = true

[[bench]]
name = "order_hashing"
harness = false

[[bench]]
name = "uid_packing"
harness = false
