[package]
name = "cow-sdk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Shared CoW Protocol core types and validation primitives"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-core"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "defi", "core", "trading"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
async-trait.workspace = true
hex.workspace = true
http.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tracing = { workspace = true, optional = true }
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["json", "rustls"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tsify.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
num-bigint.workspace = true
proptest.workspace = true
serde_json.workspace = true
syn.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wiremock.workspace = true
