[package]
name = "cow-sdk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Shared CoW Protocol core types and validation primitives"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-core"
homepage = "https://github.com/0xSymbiome/cow-rs"
keywords = ["cow-protocol", "sdk", "defi", "core", "trading"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints]
workspace = true

[features]
default = []
tracing = ["dep:tracing"]
# Shared HTTP retry, rate-limit, `Retry-After`, jitter, and transport-error
# classification policy for the orderbook, subgraph, and IPFS clients. Off by
# default so a `cow-sdk-core` consumer that needs only the primitive types does
# not pull the retry-timer dependencies.
transport-policy = ["dep:httpdate", "dep:futures-timer", "dep:gloo-timers", "dep:web-time"]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
async-trait.workspace = true
futures-timer = { workspace = true, optional = true }
http.workspace = true
httpdate = { workspace = true, optional = true }
pin-project-lite.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tracing = { workspace = true, optional = true }
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tsify.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

# Browser fetch transport (`cow_sdk_core::transport::fetch`). Gated to JS realms
# (`target_os = "unknown"`) so WASI builds never pull the browser-global stack.
# This is the wasm sibling of the native `reqwest` transport above.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
gloo-timers = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["AbortController", "AbortSignal", "Headers", "Request", "RequestInit", "Response"] }

[dev-dependencies]
cow-sdk-test-utils = { path = "../test-utils", features = ["proptest"] }
num-bigint.workspace = true
proptest.workspace = true
serde_json.workspace = true
syn.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
trybuild.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# `json` is exercised only by the transport classifier test, which uses
# reqwest's `.json()` to produce a decode-class error; `gzip` lets the
# response-cap tests prove the limit applies to decompressed bytes. The
# library itself reads bodies through the size-capped streaming path and
# needs neither feature.
flate2 = "1"
reqwest = { workspace = true, features = ["json", "gzip"] }
wiremock.workspace = true
