[package]
name = "cow-sdk-cow-shed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Reserved crate manifest for future COW Shed helpers"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-cow-shed"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "safe", "defi"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[lints]
workspace = true

[features]
default = []

[dependencies]
