[package]
name = "cow-sdk-cow-shed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "CoW Protocol COW Shed proxy address, EIP-712, and calldata helpers"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-cow-shed"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "sdk", "cow-shed", "eip712", "hooks"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
all-features = true

[lints]
workspace = true

[features]
default = []
cow-shed-ens = []
cow-shed-gnosis = []
with_ens = ["cow-shed-ens"]
tracing = ["dep:tracing", "cow-sdk-core/tracing"]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
cow-sdk-app-data = { path = "../app-data", version = "0.1.0" }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0" }
cow-sdk-core = { path = "../core", version = "0.1.0" }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
cow-sdk-test-utils = { path = "../test-utils" }
serde.workspace = true
sha3.workspace = true
syn.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
